feat: add Vercel serverless function to proxy Coze API requests and fix CORS issue

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/coze/:path*",
+      "destination": "/api/coze/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
