fix: explicitly add /api/chat rewrite rule

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/chat",
+      "destination": "/api/chat"
+    },
+    {
       "source": "/((?!api/).*)",
       "destination": "/index.html"
     }
